# rclone-bisync-manager

./: .gitignore  LICENSE  README.md  TODO.md  config.sample.yaml  config.yaml.example  config.yaml.sample  d.sh  pyproject.toml  pyproject.tray.toml  rclone-bisync-manager.service  rclone-bisync.conf  rclone-bisync.service  rclone-bisync.sh  rclone_bisync.py  requirements.txt  test-config.yaml  test_daemon_control.py
config_sample/: config.yaml.sample
desktop/: rclone-bisync-manager-tray.desktop
src/: cli.py  config.py  daemon.py  daemon_functions.py  interval_utils.py  logging_utils.py  main.py  rclone-bisync.py  rclone_bisync.py  rclone_bisync_manager.py  scheduler.py  shared_variables.py  status_server.py  sync.py  system_tray.py  utils.py
src/rclone_bisync_manager/: cli.py  config.py  daemon_functions.py  logging_utils.py  main.py  scheduler.py  status_server.py  sync.py  system_tray.py  utils.py
src/rclone_bisync_manager_tray/: config_editor.py  system_tray.py
systemd/: rclone-bisync-manager.service  rclone-bisync.conf  rclone-bisync.service  rclone-bisync@.service  rclone-bisync@.timer  timer.conf
