[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rclone_bisync_manager"
version = "0.1.0"
description = "RClone BiSync Manager with system tray application"
requires-python = ">=3.12"
dependencies = [
    "croniter==3.0.3",
    "Pillow==10.4.0",
    "pydantic==2.8.2",
    "pystray==0.19.5",
    "python_daemon==3.0.1",
    "PyYAML==6.0.2",
    "PyGObject==3.46.0",
]

[project.scripts]
rclone-bisync-manager = "rclone_bisync_manager.main:main"
rclone-bisync-tray = "rclone_bisync_manager.system_tray:run_tray"

[tool.setuptools.packages.find]
where = ["src"]